--- a/js/widget.css
+++ b/js/widget.css
@@ -12,6 +12,7 @@
     width: 50%;
     padding: 10px;
     overflow-y: scroll;
+    -moz-user-select: none;
 }
 
 /* Clear floats after the columns */
