--- a/js/widget.css
+++ b/js/widget.css
@@ -12,7 +12,6 @@
     width: 50%;
     padding: 10px;
     overflow-y: scroll;
-    -moz-user-select: none;
 }
 
 /* Clear floats after the columns */
@@ -20,4 +19,8 @@
     content: "";
     display: table;
     clear: both;
+}
+
+.pce-line-p {
+    pointer-events: inherit;
 }
